[gd_scene load_steps=4 format=3 uid="uid://dqodeeqn5o0w5"]

[ext_resource type="PackedScene" uid="uid://dby770p0nloai" path="res://src/core/ui/max_size_scroll_panel.tscn" id="1_2s1qg"]
[ext_resource type="Texture2D" uid="uid://cuvt1v66hlaec" path="res://assets/graphics/ui/icons/cancel.png" id="1_5yjti"]
[ext_resource type="Script" path="res://src/core/ui/game/status_effects_panel.gd" id="1_are16"]

[node name="StatusEffectsPanel" instance=ExtResource("1_2s1qg")]
offset_right = 87.0
offset_bottom = 72.0
script = ExtResource("1_are16")
halign = 3

[node name="PanelContainer" parent="." index="0"]
layout_mode = 3
offset_right = 87.0
offset_bottom = 30.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Header" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Header/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "Status Effects:"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/Header/HBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/margin_top = -4
theme_override_constants/margin_right = -3

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/Header/HBoxContainer/MarginContainer" index="0"]
layout_mode = 2
icon = ExtResource("1_5yjti")

[node name="EffectsList" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/ScrollContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/HBoxContainer/MarginContainer/Cancel" to="." method="_on_cancel_pressed"]
